--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -17,6 +17,15 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 300;
 }
 
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
+}
+
 @media(min-width:767px) {
     .navbar {
         padding: 20px 0;
@@ -36,13 +45,13 @@ The padding is very important to make sure the scrollspy picks up the right area
 of those sections to manage the look and feel of the site. */
 
 .intro-section {
-    height: 100%;
+    /*height: 100%;*/
     text-align: center;
     background: #fff;
 }
 
 .about-section {
-    height: 100%;
+    /*height: 100%;*/
     padding-top: 150px;
     text-align: center;
     background: #fff;
@@ -50,14 +59,14 @@ of those sections to manage the look and feel of the site. */
 }
 
 .services-section {
-    height: 100%;
+    /*height: 100%;*/
     padding-top: 150px;
     text-align: center;
     background: #fff;
 }
 
 .contact-section {
-    height: 100%;
+    /*height: 100%;*/
     padding-top: 150px;
     /*text-align: center;*/
     /*background: #eee;*/
@@ -92,7 +101,8 @@ of those sections to manage the look and feel of the site. */
 }
 
 .intro-divider {
-    width: 400px;
+    /*width: 400px;*/
+    text-align: center;
     border-top: 1px solid #f8f8f8;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
@@ -101,7 +111,7 @@ of those sections to manage the look and feel of the site. */
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
 }
 
-@media (max-width: 767px) {
+/*@media (max-width: 767px) {
     .intro-message {
         padding-bottom: 15%;
     }
@@ -123,7 +133,7 @@ of those sections to manage the look and feel of the site. */
     .intro-divider {
         width: 100%;
     }
-}
+}*/
 
 .network-name {
     text-transform: uppercase;
@@ -175,7 +185,7 @@ of those sections to manage the look and feel of the site. */
     margin-top: 0;
 }
 
-@media (max-width: 1199px) {
+/*@media (max-width: 1199px) {
     ul.banner-social-buttons {
         float: left;
         margin-top: 15px;
@@ -198,7 +208,7 @@ of those sections to manage the look and feel of the site. */
     ul.banner-social-buttons > li:last-child {
         margin-bottom: 0;
     }   
-}
+}*/
 
 footer {
     background-color: #f8f8f8;
