moved images and new clients

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -82,7 +82,7 @@ of those sections to manage the look and feel of the site. */
     padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
     padding-bottom: 50px;
     color: #f8f8f8;
-    background: url(../alejandroescamilla-book-low.jpg) no-repeat center center;
+    background: url(../images/background.jpg) no-repeat center center;
     background-size: cover;
     height: 100%;
     text-align: center;
